data/all_generated_tests/raw_wast_tests/block_ImproperFunctionCallorReturnHandling_2528.wast
;; 9. **Function Call with Incorrect Label Indexing**:    - **Description**: Include a `call` instruction within a block that should target a labeled block, testing if label indexing is maintained correctly during the call.    - **Constraint**: Ensure labels are correctly indexed and managed in function calls.    - **Improper Handling**: Labels may get mismanaged during calls, leading to incorrect function execution paths.

(assert_invalid
  (module
    (type $t0 (func))
    (func $f0 (result i32)
      (block $lbl (result i32)
        (i32.const 1)
        (call $f1)
        (br 0)
      )
    )
    (func $f1 (result i32)
      (block $lbl1 (result i32)
        (i32.const 2)
        (br $lbl)
      )
    )
  )
  "unknown label"
)